# visualmetafont

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/: FUNDING.yml
examples/testvarfont/: .gitignore  BUILD.md  README.md  bibtex.bib  charstrings.lua  demo_juz_amma_just.tex  digitalkhatt-define.lua  digitalkhatt-plug.lua  digitalkhatt.lua  digitalkhatt.sty  digitalkhatt_glyphnames.lua  fontloader-digitalkhatt-cff2.lua  lpdf-ini-digitalkhatt.lua  lpdf-ini-local.lua  luahbtex.patch  luaotfload.conf  luatex.v2.patch  mushaffeatures.lua  quran.lua  quran.tex  quran_latex.tex  quran_style.tex  quran_text.tex  quran_text_madina.tex  readme.tex  testquran.tex  testquran_justify.tex  testvarfont.ps1  testvarfont.tex  testvarfont_justify.tex
examples/testvarfont/digitalkhatt/: digitalkhatt_glyphnames.lua  digitalkhatt_lookupnames.lua
examples/testvarfont/luaotfload/: fontloader-font-cff.lua  fontloader-font-ots.lua  fontloader-font-shp.lua  fontloader-fonts-gbn.lua  luaotfload-harf-define.lua  luaotfload-harf-plug.lua  luaotfload-init.lua  luaotfload.lua
files/: automedina-html.fea  automedina.fea  ayah.mp  digitalkhatt.mp  digitalkhatt_glyphnames.lua  digitalkhatt_lookupnames.lua  frame.mp  lookups-html.json  lookups.json  medinafont.mp  mpguifont.mp  myfontbase.mp  parameters.json
fonts/digitalkhatt/: automedina-html.fea  automedina.fea  digitalkhatt.mp  digitalkhatt_unicodes.lua  mpguifont.mp  myfontbase.mp  otherglyphs.mp  overflows_with_just.csv  parameters.json  quran_medina_inputtext.txt
fonts/digitalkhatt/images/: Thumbs.db
fonts/digitalkhatt/output/: digitalkhatt_glyphnames.lua  digitalkhatt_lookupnames.lua
fonts/indopak/: automedina.fea  indopak.mp  mpguifont.mp  myfontbase.mp  parameters.json
fonts/oldmadina/: automedina.fea  mfplain.mp  mpguifont.mp  oldmadina.mp  parameters.json
fonts/oldmadina/output/: commands.txt  example2.css  generatewoff2.txt  issues.html  kashidas.css  kashidas.html  kashidas.js  new 1.txt  oldmadina_glyphnames.lua  oldmadina_lookupnames.lua  oldmadina_unicodes.lua  overflows.csv  overflows_with_just.csv  overlaps.txt  pages.component.ts.html  quran_medina_inputtext.txt  quran_text.js
lib/QtPropertyBrowser/: CMakeLists.txt  QtPropertyBrowser.pro  qtpropertybrowser.pri  qtpropertybrowserutils.cpp
lib/harfbuzz/: CMakeLists.txt
lib/mplib/: CMakeLists.txt  mp.c  mplib.h  mplibpng.h  mplibps.h  mplibsvg.h  mpmath.c  mpmath.h  mpmathbinary.c  mpmathbinary.h  mpmathdecimal.c  mpmathdecimal.h  mpmathdouble.c  mpmathdouble.h  mpmathinterval.c  mpmathinterval.h  mpmp.h  mpost.c  mppngout.h  mppsout.h  mpstrings.c  mpstrings.h  mpsvgout.h  mpxout.c  mpxout.h  newmp.cpp  pngout.c  psout.c  svgout.c  tfmin.c
lib/mplib/AddedFiles/: newmp.c  newmp.h
lib/mplib/w2c/: c-auto.h  config.h  config.original.h
src/: CMakeLists.txt  cpp.hint  global.h  main.cpp
src/Export/: ExportToHTML.cpp  ExportToHTML.h  GenerateLayout.cpp  GenerateLayout.h  generateLayoutBinary.cpp  generateLayoutProtoBuf.cpp
src/Export/protobuf/: commands.txt  quran.pb.cc  quran.pb.h  quran.proto
src/FeaParser/: driver.cpp  driver.h  feaast.cpp  feaast.h  fsm.cpp  just.cpp  just.h  parser.y  scanner.h  scanner.l  statement.h
src/GlyphParser/: glyphdriver.cpp  glyphdriver.h  glyphparser.y  glyphscanner.h  glyphscanner.l
src/HTML5/: ExportToHTML.cpp  ExportToHTML.h
src/Layout/: FSMDriver.cpp  FSMDriver.h  GlyphItem.cpp  GlyphItem.h  GlyphVis.cpp  GlyphVis.h  GraphicsSceneAdjustment.cpp  GraphicsSceneAdjustment.h  GraphicsViewAdjustment.cpp  GraphicsViewAdjustment.h  HbDrawToQtPath.cpp  HbDrawToQtPath.h  JustificationContext.cpp  JustificationContext.h  LayoutWindow.cpp  LayoutWindow.h  Lookup.cpp  Lookup.h  LookupEdit.cpp  OtLayout.cpp  OtLayout.h  QByteArrayOperator.cpp  QByteArrayOperator.h  Subtable.cpp  Subtable.h  adjust_overlapping.cpp  adjust_overlapping2.cpp  apply_force.cpp  commontypes.h  compare_with_qpc.cpp  contact_flexible.cpp  contact_flexible.h  generateOverlapLookups.cpp  geometry.cpp  geometry.h  gjk_epa.cpp  gllobal_strings.cpp  gllobal_strings.h  just_features.cpp  optimize_layout.cpp  (+4 more)
src/Pdf/: qpdf.cpp  qpdf.h  quranpdfwriter.cpp  quranpdfwriter.h  quranpdfwriterpdfhummus.cpp  quranpdfwriterpdfhummus.h
src/Resources/: mpgui.qrc  visualmetafont.icns
src/Resources/fonts/: surahCodes.json
src/Resources/metafont/: vmf.mp
src/automedina/: automedina.cpp  automedina.h  defaultmarkpositions.h  digitalkhatt.cpp  digitalkhatt.h  indopak.cpp  indopak.h  oldmadina.cpp  oldmadina.h
src/demos/: nibenvelope.cpp  nibenvelope.h
src/fontwindow/: fontscene.cpp  fontscene.hpp  glyphcellheaderitem.cpp  glyphcellheaderitem.hpp  glyphcellitem.cpp  glyphcellitem.hpp  mainwindow.cpp  mainwindow.h  mdichild.cpp  mdichild.h
src/glyphwindow/: commands.cpp  commands.h  componentitem.cpp  componentitem.hpp  contouritem.cpp  contouritem.hpp  defchar(kaf.fina.afterlam.sty  editorfactory.cpp  editorfactory.hpp  glyphparametercontroller.cpp  glyphparametercontroller.hpp  glyphscene.cpp  glyphscene.hpp  glyphview.cpp  glyphview.hpp  glyphwindow.cpp  glyphwindow.h  guidesitem.cpp  guidesitem.hpp  imageitem.cpp  imageitem.hpp  knotcontrolleditem.cpp  knotcontrolleditem.hpp  knotitem.cpp  knotitem.hpp  pairitem.cpp  pairitem.hpp  pathview.cpp  pathview.h  ruleritem.cpp  ruleritem.hpp  tensiondirectionitem.cpp  tensiondirectionitem.hpp
src/luatex/luadigitalkhatt/: blob.c  buffer.c  class_utils.c  direction.c  face.c  feature.c  font.c  language.c  luadigitalkhatt.c  luadigitalkhatt.h  ot.c  script.c  tag.c  unicode.c  variation.c
src/metafont/: exp.hpp  font.cpp  font.hpp  glyph.cpp  glyph.hpp  metafont.h  pathpointexp.hpp
src/qurantext/: quran.cpp  quran.h  qurancomplex.cpp  surahs.cpp
src/weblib/: quranshaper.h  visualmetafontwasm.cpp
tools/QuranTextGenerator/: .gitignore  DiffMatchPatchTest.cs  Program.cs  QPCDoc.cs  QuranTextGenerator.csproj  QuranTextGenerator.sln  TarteelData.cs  XmlToDynamic.cs
tools/QuranTextGenerator/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs  (+1 more)
(+16 files in other folders)
